fix: 404 adding index.md

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Jref News"
 description: "RSS based summarized tech news feed"
-baseurl: ""
+baseurl: "/Jref"
 url: "https://wyjee.github.io/Jref"
 
 theme: minima
